--- a/index.html
+++ b/index.html
@@ -26,102 +26,60 @@
   <div class="container">
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        9AM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        10AM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        11AM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        12PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        1PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        2PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        3PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        4PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
     <div class="row">
       <div class="col-1 time-block hour">
-        9AM
-      </div>
-      <div class="col-10">
-        <textarea></textarea>
-      </div>
-      <div class="col-1 saveBtn">
-      </div>
+        5PM</div>
+      <div class="col-10 description"> <textarea></textarea></div>
+      <div class="col-1 saveBtn btn btn-secondary"></div>
     </div>
-
 
   </div>
-
-
-
-
-
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
