--- a/index.html
+++ b/index.html
@@ -27,56 +27,64 @@
     <div class="row">
       <div class="col-1 time-block hour">
         9AM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="nineam" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="9"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         10AM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="tenam" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="10"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         11AM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="elevenam" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="11"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         12PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="twelvepm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="12"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         1PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="onepm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="1"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         2PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="twopm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="2"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         3PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="threepm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="3"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         4PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="fourpm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="4"></div>
     </div>
+
     <div class="row">
       <div class="col-1 time-block hour">
         5PM</div>
-      <div class="col-10 description"> <textarea></textarea></div>
-      <div class="col-1 saveBtn btn btn-secondary"></div>
+      <textarea id="fivepm" class="col-10 description"></textarea>
+      <div class="col-1 saveBtn btn btn-secondary" data-time="5"></div>
     </div>
 
   </div>
